# sidstack

./: .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  npm-publish.yml  release.yml
docs/: API_REFERENCE.md  CLAUDE_CODE_INTEGRATION.md  DEMO_SCENARIOS.md  GETTING_STARTED.md  IMPACT_ANALYSIS.md  PRODUCT_STRATEGY.md  QUICK_START.md  README.md  ROADMAP_Q1_2026.md  TEAM_MANAGEMENT.md  TECHNICAL_DEBT.md  USER_GUIDE_VIEW_ONLY_APP.md
docs/ADRs/: 002-oclif-cli-framework.md  004-turborepo-monorepo.md
docs/demos/: claude-training-walkthrough.md
docs/guides/: impact-analysis.md  knowledge-browser.md  project-hub.md  (+4 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_coordinator.rs  api_server.rs  claude_process.rs  claude_session.rs  ipc_server.rs  lib.rs  main.rs  recovery_watchdog.rs  sdk_sidecar.rs  session.rs  session_storage.rs  session_tracker.rs  singleton.rs  team_manager.rs  team_storage.rs  utils.rs  workspace_storage.rs
src-tauri/src/commands/: agent.rs  claude.rs  crash.rs  file.rs  git.rs  mod.rs  openspec.rs  orchestrator.rs  session.rs  slash.rs  team.rs  test_room.rs  tray.rs  window.rs  workspace.rs
(+229 files in other folders)
