[package]
name = "sidstack"
version = "0.4.0"
description = "SidStack - AI-Powered Project Intelligence Platform"
authors = ["SidStack Team"]
edition = "2021"

[[bin]]
name = "SidStack"
path = "src/main.rs"

[lib]
name = "sidstack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rand = "0.8"
libc = "0.2"
portable-pty = "0.8"
vt100 = "0.15"
futures = "0.3"
tauri-plugin-shell = "2"
regex = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"

# Optimize release builds for smaller binary size
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
